fix: Of the invisible values bug for 'price' and 'language'

--- a/public/css/book-details.css
+++ b/public/css/book-details.css
@@ -34,12 +34,12 @@
     width: 100%;
     height: 500px;
     color: white;
-    background:rgb(26, 56, 42);
+    /* background:rgb(26, 56, 42); just to test */
 }
 
 .book-presentation article {
     margin-left: 375px;
-    background: rgb(39, 26, 56);
+    /* background: rgb(39, 26, 56); just to test */
 }
 
 .book-presentation article div h1 {
@@ -48,12 +48,4 @@
     box-shadow: 15px 7.5px 15px #0a0a0a6c;
     background: #0a0a0a57;
     transform: translateY(0); /* Fix the opacity bug */
-}
-
-#book-data h3{
-    font-size: 2.1em;
-}
-
-#book-data h4 {
-    font-size: 1.6em;
 }
